syntax = "proto3";

package admin_movies_persons_service;
option go_package = "admin_movies_persons_service/v1/protos";
import "google/protobuf/timestamp.proto";

message SearchPersonRequest {
    optional string fullnameRU =1[json_name="fullname_ru"];
    optional string fullnameEN =2[json_name="fullname_en"];
    optional google.protobuf.Timestamp birthday = 3;
    optional string sex = 4;
    optional bytes photo = 5[json_name="photo"];

    // must be in range 10-100
    int32 limit = 6;
  
    // must be > 0
    int32 page = 7;
}
message SearchPersonByNameRequest {
  string Name = 1[json_name = "name"];
  
  // must be in range 10-100
  int32 limit = 2;

  // must be > 0
  int32 page = 3;
}
message DeletePersonsResponce {
  repeated string DeletedPersonIDs = 1[json_name="deleted_persons_ids"];
}

message GetPersonsRequest {
  // use ',' as separator
  string PersonsIDs = 1[json_name="persons_ids"];

  // must be in range 10-100
  int32 limit = 2;

  // must be > 0
  int32 page = 3;
}

message CreatePersonResponce {
  string PersonID = 1[json_name="person_id"];;
}

message IsPersonsExistsRequest {
    // use ',' as separator
    string PersonsIDs = 1[json_name="persons_ids"];
}

message IsPersonsExistsResponse {
  bool PersonsExists = 1[json_name="persons_exists"];
  repeated int32 NotExistIDs = 2[json_name="not_exist_ids"];
}

message UpdatePersonFieldsRequest {
  // person id for updating
 string ID = 1[json_name="id"];
 optional string fullnameRU =2[json_name="fullname_ru"];
 optional string fullnameEN =3[json_name="fullname_en"];
 optional google.protobuf.Timestamp birthday = 4;
 optional string sex = 5;
 optional bytes photo = 6[json_name="photo"];
}

message UpdatePersonRequest {
  // person id for updating
 string ID = 1[json_name="id"];
 string fullnameRU =2[json_name="fullname_ru"];
 string fullnameEN =3[json_name="fullname_en"];
 google.protobuf.Timestamp birthday = 4;
 string sex = 5;
 bytes photo = 6[json_name="photo"];
}

message CreatePersonRequest {
  string fullnameRU =1[json_name="fullname_ru"];
  optional string fullnameEN =2[json_name="fullname_en"];
  optional google.protobuf.Timestamp birthday = 3;
  optional string sex = 4;
  optional bytes photo = 5[json_name="photo"];
}

message DeletePersonsRequest {
  // use ',' as separator
  string PersonsIDs = 1[json_name="persons_ids"];
}

message IsPersonWithIDExistsResponse {
  bool PersonExists = 1[json_name="person_exists"];
}

message IsPersonWithIDExistsRequest {
  string PersonID =  1[json_name="person_id"];
}

message IsPersonExistsResponse {
  bool PersonExists = 1[json_name="person_exists"];
  repeated string FindedPersonsIDs = 2[json_name="finded_persons_ids"];
}

message IsPersonExistsRequest {
  optional string fullnameRU =1[json_name="fullname_ru"];
  optional string fullnameEN =2[json_name="fullname_en"];
  optional google.protobuf.Timestamp birthday = 3;
  optional string sex = 4;
}


message Person {
  string fullnameRU =1[json_name="fullname_ru"];
  string fullnameEN =2[json_name="fullname_en"];
  string birthday = 3;
  string sex = 4;
  string photoUrl = 5[json_name="photo_url"];
}

message Persons {
  map<string, Person> persons = 1;
}

message UserErrorMessage { string message = 1 [ json_name = "message" ]; }